test/classes/initializers/records/declaration.good
declaration.chpl:11: error: unresolved call 'Foo.init()'
declaration.chpl:6: note: this candidate did not match: Foo.init(xVal)
declaration.chpl:11: note: because call does not supply enough arguments
declaration.chpl:6: note: it is missing a value for formal 'xVal'
